Ajout base de donnée
Authentification et inscription lié à la base de donnée

--- a/app/src/main/res/layout/accueil_layout.xml
+++ b/app/src/main/res/layout/accueil_layout.xml
@@ -58,7 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/pseudo"
-            android:inputType="text"
+            android:inputType="textEmailAddress"
             android:textColor="@color/colorFontDark" />
     </android.support.design.widget.TextInputLayout>
 
@@ -216,7 +216,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/pseudo"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:textColor="@color/colorFontDark" />
         </android.support.design.widget.TextInputLayout>
 
