--- a/app/src/main/res/layout/activity_day.xml
+++ b/app/src/main/res/layout/activity_day.xml
@@ -1,79 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:fitsSystemWindows="true"
-    tools:context="uqac.natacha.food_calendar.StuffList">
+    tools:context="uqac.natacha.food_calendar.DayActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/date"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="20dp">
+        android:layout_width="wrap_content"
+        android:text="Date"
+        android:textSize="45dp"
+        android:textAlignment="center"
+        android:visibility="visible"
+        />
 
-        <EditText
-            android:id="@+id/editText_stuffAdd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Name"
-            android:layout_weight="60"
-            android:inputType="textPersonName" />
-
-        <EditText
-            android:id="@+id/quantityAdd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Quantity"
-            android:inputType="number" />
-
-        <Button
-            android:id="@+id/button_addStuff"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="add" />
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:paddingTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-         <TextView
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:paddingLeft="15dp"
-             android:layout_weight="2"
-             android:text="Stuff"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="3"
-            android:text="Quantity"
-            android:paddingRight="15dp"
-            android:gravity="right"/>
-
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="4"
-            android:text="own"/>
-
-    </LinearLayout>
-
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/item_list_view"></ListView>
-
-
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
