--- a/app/src/main/res/layout/liste_recettes_layout.xml
+++ b/app/src/main/res/layout/liste_recettes_layout.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp"
-        android:text="RECETTES"
+        android:text="@string/Recipes"
         android:textSize="30sp"
         android:textStyle="bold" />
 
