--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
     android:layout_height="match_parent">
 
 
@@ -14,9 +15,11 @@
         android:orientation="horizontal">
 
         <TextView
+
+            android:textColor="@color/colorAccent"
             android:id="@+id/your_recipe_list"
             android:layout_width="wrap_content"
-
+            android:textStyle="bold"
             android:layout_toLeftOf="@id/floatingActionButton_add"
             android:text="Your recipe list"
             android:textSize="35dp"
@@ -36,8 +39,6 @@
             app:srcCompat="@android:drawable/ic_input_add" />
 
     </RelativeLayout>
-
-
 
 
 
