--- a/app/src/main/res/layout/custom_list_stuff.xml
+++ b/app/src/main/res/layout/custom_list_stuff.xml
@@ -31,6 +31,7 @@
             >
 
             <TextView
+                android:textColor="@color/colorAccent"
                 android:id="@+id/textView_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -43,6 +44,7 @@
 
 
             <TextView
+                android:textColor="@color/colorAccent"
                 android:id="@+id/textView_quantity"
                 android:layout_width="match_parent"
                 android:gravity="center"
