--- a/app/src/main/res/layout/recipes_category_layout.xml
+++ b/app/src/main/res/layout/recipes_category_layout.xml
@@ -79,4 +79,17 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/btn_plat" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:clickable="true"
+        app:srcCompat="@drawable/ic_add"
+        android:onClick="addRecipe"
+        android:layout_marginBottom="16dp"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="16dp" />
+
 </android.support.constraint.ConstraintLayout>
