--- a/app/src/main/res/menu/activity_calendar_drawer.xml
+++ b/app/src/main/res/menu/activity_calendar_drawer.xml
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_recipe"
             android:icon="@drawable/ic_class_black_24dp"
-            android:title="Mes recettes" />
+            android:title="Recettes" />
         <item
             android:id="@+id/nav_shopping"
             android:icon="@drawable/ic_shopping_basket_black_24dp"
@@ -31,7 +31,7 @@
             <item
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/ic_settings_black_24dp"
-                android:title="Paramètres du compte" />
+                android:title="Modifier mon profil" />
             <item
                 android:id="@+id/nav_disconnection"
                 android:icon="@drawable/ic_power_settings_new_black_24dp"
