--- a/app/src/main/res/layout/activity_day.xml
+++ b/app/src/main/res/layout/activity_day.xml
@@ -1,19 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="uqac.natacha.food_calendar.DayActivity">
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:text="Date"
-        android:textSize="45dp"
-        android:textAlignment="center"
-        android:visibility="visible"
-        />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</android.support.constraint.ConstraintLayout>
+
+        <RelativeLayout
+            android:layout_marginTop="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+
+            <TextView
+
+                android:textColor="@color/colorAccent"
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:textStyle="bold"
+                android:text="Your recipe list"
+                android:textSize="35dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="15dp"/>
+
+
+        </RelativeLayout>
+
+        <ListView
+            android:paddingTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/menu_list_views"
+            >
+        </ListView>
+
+
+
+    </LinearLayout>
+
+
+
+</RelativeLayout>
